# Simulator

./: .gitignore  .gitignore~  README.md  annotated.html  class_staterobot-members.html  class_staterobot.html  class_staterobot__coll__graph.map  class_staterobot__coll__graph.md5  classes.html  classspiri__api_1_1api_1_1_position-members.html  classspiri__api_1_1api_1_1_position.html  classspiri__api_1_1api_1_1_position__coll__graph.map  classspiri__api_1_1api_1_1_position__coll__graph.md5  classspiri__api_1_1api_1_1_state-members.html  classspiri__api_1_1api_1_1_state.html  classspiri__api_1_1api_1_1_state__coll__graph.map  classspiri__api_1_1api_1_1_state__coll__graph.md5  classspiri__api_1_1api_1_1gps-members.html  classspiri__api_1_1api_1_1gps.html  classspiri__api_1_1api_1_1gps__coll__graph.map  classspiri__api_1_1api_1_1gps__coll__graph.md5  classspiri__api_1_1api_1_1imu-members.html  classspiri__api_1_1api_1_1imu.html  classspiri__api_1_1api_1_1imu__coll__graph.map  classspiri__api_1_1api_1_1imu__coll__graph.md5  classspiri__api_1_1api_1_1spiri__api__python-members.html  classspiri__api_1_1api_1_1spiri__api__python.html  classspiri__api_1_1api_1_1spiri__api__python__coll__graph.map  classspiri__api_1_1api_1_1spiri__api__python__coll__graph.md5  classspiri__api_1_1camera_1_1_position-members.html  classspiri__api_1_1camera_1_1_position.html  classspiri__api_1_1camera_1_1_state-members.html  classspiri__api_1_1camera_1_1camera__interface-members.html  classspiri__api_1_1camera_1_1imu-members.html  classspiri__api_1_1camera_1_1imu.html  classspiri__api_1_1camera_1_1spiri__api__python-members.html  classspiri__api_1_1camera_1_1spiri__api__python.html  classspiri__api_1_1figure__movement_1_1_staterobot-members.html  classspiri__api_1_1figure__movement_1_1_staterobot.html  classspiri__api_1_1get__state_1_1_staterobot-members.html  (+122 more)
action_controller/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
action_controller_python/: CMakeLists.txt  package.xml
collision_warning/: CMakeLists.txt  package.xml
docs/: Makefile  conf.py  index.rst  make.bat  overview.rst  simulator.rst
examples/: read_camera.py  read_sensors.py  send_goals.py  test.py
gazebo_block_laser_pcl2/: CMakeLists.txt  package.xml
moveit_simple_controller_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
spiri_apps/crack_scan/: CMakeLists.txt  crack_scan.cpp  detect_crack.h  window.cpp  window.h
spiri_apps/goal_testing/: CMakeLists.txt  test_goal.cpp
(+499 files in other folders)
